--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.apps.darkstorm.cdr"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 3
-        versionName '0.0.0.3'
+        versionCode 4
+        versionName '0.0.0.4'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,6 +42,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.android.support:cardview-v7:27.0.2'
 }
 
 repositories {
