--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.github.clans:fab:1.6.4'
 }
 
 repositories {
