--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
         maven {
             url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
         }
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -17,6 +20,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'io.fabric.tools:gradle:1.24.4'
     }
 }
 
@@ -24,6 +28,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
