--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,10 +23,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.apps.darkstorm.customdiceroller"
+        applicationId "com.apps.darkstorm.cdr"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
+        versionCode 200000000
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -48,4 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.google.firebase:firebase-crash:15.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
