--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  firebase_core: "^0.2.2"
+  firebase_analytics: "^0.3.1"
 
 dev_dependencies:
   flutter_test:
