--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,15 @@ description: CDR
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  flutter_svg: ^0.6.1+1
   cupertino_icons: "^0.1.2"
-  firebase_core: "^0.2.5"
-  firebase_analytics: "^1.0.2"
-  firebase_messaging: "^1.0.4"
-  shared_preferences: "^0.4.2"
-  flutter_fab_dialer: "^0.0.5"
-  url_launcher: "^3.0.3"
+  firebase_core: "^0.2.5+1"
+  firebase_analytics: "^1.0.4"
+  firebase_messaging: "^2.0.2"
+  shared_preferences: "^0.4.3"
+  flutter_fab_dialer: "^0.1.1"
+  url_launcher: "^4.0.1"
   path_provider: "^0.4.1"
   package_info: "^0.3.2"
 
@@ -30,6 +31,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
