--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,11 +5,13 @@ buildscript {
         maven {
             url "https://maven.google.com"
         }
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
         classpath 'com.google.gms:google-services:4.1.0'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
