--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-  flutter_svg: ^0.6.1+1
+  flutter_svg: "^0.6.1+1"
   cupertino_icons: "^0.1.2"
   firebase_core: "^0.2.5+1"
   firebase_analytics: "^1.0.4"
@@ -15,6 +15,7 @@ dependencies:
   url_launcher: "^4.0.1"
   path_provider: "^0.4.1"
   package_info: "^0.3.2"
+  flutter_crashlytics: "^0.1.1"
 
 dev_dependencies:
   flutter_test:
