--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,17 +5,17 @@ dependencies:
   flutter:
     sdk: flutter
   
-  flutter_svg: "^0.6.1+1"
+  flutter_svg: ^0.14.1
   cupertino_icons: "^0.1.2"
-  firebase_core: "^0.2.5+1"
-  firebase_analytics: "^1.0.4"
-  firebase_messaging: "^2.0.2"
-  shared_preferences: "^0.4.3"
+  firebase_core: "^0.4.0+9"
+  firebase_analytics: "^5.0.1"
+  firebase_messaging: "^5.1.5"
+  shared_preferences: "^0.5.3+4"
   flutter_fab_dialer: "^0.1.1"
-  url_launcher: "^4.0.1"
-  path_provider: "^0.4.1"
-  package_info: "^0.3.2"
-  flutter_crashlytics: "^0.1.1"
+  url_launcher: "^5.1.2"
+  path_provider: "^1.3.0"
+  package_info: "^0.4.0+6"
+  flutter_crashlytics: "^1.0.0"
 
 dev_dependencies:
   flutter_test:
