--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,28 @@
 name: customdiceroller
-description: CDR
+description: Flutter version of CDR.
+
+code: 20000000
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  flutter_svg: ^0.14.1
-  cupertino_icons: "^0.1.2"
+
+
+  flutter_svg: "^0.14.3"
   firebase_core: "^0.4.0+9"
-  firebase_analytics: "^5.0.1"
-  firebase_messaging: "^5.1.5"
-  shared_preferences: "^0.5.3+4"
+  firebase_analytics: "^5.0.2"
+  firebase_messaging: "^5.1.6"
+  shared_preferences: "^0.5.4+3"
   flutter_fab_dialer: "^0.1.1"
-  url_launcher: "^5.1.2"
-  path_provider: "^1.3.0"
-  package_info: "^0.4.0+6"
+  url_launcher: "^5.2.5"
+  path_provider: "^1.4.0"
+  package_info: "^0.4.0+10"
   flutter_crashlytics: "^1.0.0"
+  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -23,7 +30,7 @@ dev_dependencies:
 
 
 # For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
+# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -32,20 +39,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   assets:
     - assets/
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
+  # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
+  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -64,5 +69,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies, 
-  # see https://flutter.io/custom-fonts/#from-packages
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
