--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,17 @@ dependencies:
     sdk: flutter
 
 
-  flutter_svg: "^0.14.3"
-  firebase_core: "^0.4.0+9"
-  firebase_analytics: "^5.0.2"
-  firebase_messaging: "^5.1.6"
-  shared_preferences: "^0.5.4+3"
+  flutter_svg: "^0.15.0"
+  firebase_core: "^0.4.3+1"
+  firebase_analytics: "^5.0.9"
+  firebase_messaging: "^6.0.9"
+  shared_preferences: "^0.5.6"
   flutter_fab_dialer: "^0.1.1"
-  url_launcher: "^5.2.5"
-  path_provider: "^1.4.0"
-  package_info: "^0.4.0+10"
+  url_launcher: "^5.4.1"
+  path_provider: "^1.5.1"
+  package_info: "^0.4.0+13"
   flutter_crashlytics: "^1.0.0"
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
