--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,17 @@ dependencies:
     sdk: flutter
 
 
-  flutter_svg: "^0.18.1"
-  firebase_core: "^0.5.0"
-  firebase_analytics: "^6.0.0"
-  firebase_messaging: "^7.0.0"
-  shared_preferences: "^0.5.10"
+  flutter_svg: "^0.22.0"
+  firebase_core: "^1.6.0"
+  firebase_analytics: "^8.3.1"
+  firebase_messaging: "^10.0.6"
+  shared_preferences: "^2.0.7"
   flutter_fab_dialer: "^0.1.1"
-  url_launcher: "^5.5.3"
-  path_provider: "^1.6.14"
-  package_info: "^0.4.3"
-  flutter_crashlytics: "^1.0.0"
-  cupertino_icons: ^1.0.0
+  url_launcher: "^6.0.9"
+  path_provider: "^2.0.2"
+  package_info: "^2.0.2"
+  firebase_crashlytics: "^2.2.1"
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
