--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tech.darkstorm.customdiceroller">
+    package="tech.darkstorm.cdr">
    <application
         android:label="CDR"
         android:name="${applicationName}"
