--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,28 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=2.19.5 <3.0.0'
+
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.5
   shared_preferences: ^2.0.20
   url_launcher: ^6.1.10
   uuid: ^3.0.7
-  flutter_secure_storage: 8.0.0
+  flutter_secure_storage: ^8.0.0
+  isar_flutter_libs: ^3.0.5
+  isar: ^3.0.5
+  intl: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  isar_generator: ^3.0.5
+  build_runner: any
+
 flutter:
+  generate: true
   uses-material-design: true
