--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   isar_flutter_libs: ^3.0.5
   isar: ^3.0.5
   intl: any
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
