--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "tech.darkstorm" "\0"
             VALUE "FileDescription", "customdiceroller" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "customdiceroller" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 tech.darkstorm. All rights reserved." "\0"
             VALUE "OriginalFilename", "customdiceroller.exe" "\0"
             VALUE "ProductName", "customdiceroller" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
