Google Drive Firebase Intro screens

--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,10 @@ app.*.map.json
 /android/app/release
 
 # Misc
+lib/firebase_options.dart
 .env
+android/app/google-services.json
+ios/firebase_app_id_file.json
+ios/Runner/GoogleService-Info.plist
+macos/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
