Added proper drive failure

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,9 @@ android {
        release {
            signingConfig signingConfigs.main
        }
+       profile{
+            signingConfig signingConfigs.main
+       }
        debug{
             signingConfig signingConfigs.main
        }
