--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,9 @@ app.*.map.json
 
 # Misc
 lib/firebase_options.dart
-.env
 android/app/google-services.json
 ios/firebase_app_id_file.json
 ios/Runner/GoogleService-Info.plist
 macos/firebase_app_id_file.json
 macos/Runner/GoogleService-Info.plist
+.stupid
