--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.0-417.1.beta <4.0.0'
 
+isar_version: &isar_version ^3.1.0
+
 dependencies:
   flutter:
     sdk: flutter
@@ -16,8 +18,8 @@ dependencies:
   url_launcher: ^6.1.10
   uuid: ^3.0.7
   flutter_secure_storage: ^8.0.0
-  isar_flutter_libs: ^3.0.5
-  isar: ^3.0.5
+  isar_flutter_libs: *isar_version
+  isar: *isar_version
   intl: any
   flutter_dotenv: ^5.0.2
   google_sign_in: ^6.1.0
@@ -30,7 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  isar_generator: ^3.0.5
+  isar_generator: *isar_version
   build_runner: any
 
 flutter:
