--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   stupid: ^0.0.6
   path_provider: ^2.0.14
   xdg_directories: ^1.0.0
+  darkstorm_common: ^1.0.0-pre.3
 
 dev_dependencies:
   flutter_test:
