--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   url_launcher: ^6.1.10
   uuid: ^3.0.7
   flutter_secure_storage: ^8.0.0
-  isar_flutter_libs: ^3.1.0
-  isar: ^3.1.0
+  isar_flutter_libs: ^3.1.0+1
+  isar: ^3.1.0+1
   intl: any
   flutter_dotenv: ^5.0.2
   google_sign_in: ^6.1.0
@@ -33,7 +33,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  isar_generator: ^3.1.0
+  isar_generator: ^3.1.0+1
   build_runner: any
 
 flutter:
