--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   path_provider: ^2.0.15
 
   xdg_directories: ^1.0.0
-  darkstorm_common: ^1.0.0-pre.18
+  darkstorm_common: ^1.0.0
 
 dev_dependencies:
   flutter_test:
