--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,9 @@ dependencies:
   extension_google_sign_in_as_googleapis_auth: ^2.0.10
   googleapis: ^11.2.0
   universal_internet_checker: ^0.1.2
-  stupid: ^0.0.8
+  stupid: ^0.1.0
   path_provider: ^2.0.15
-
+  package_info_plus: ^4.0.2
   xdg_directories: ^1.0.0
   darkstorm_common: ^1.0.0
 
