--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: any
   flutter_dotenv: ^5.1.0
   stupid: ^0.2.4
+  googleapis: ^11.4.0
   path_provider: ^2.1.0
   package_info_plus: ^4.1.0
   xdg_directories: ^1.0.2
