--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: customdiceroller
 description: A roller of custom dice
 publish_to: 'none'
-version: 1.1.0+11
+version: 1.2.0+12
 
 environment:
   sdk: '>=3.0.0-417.1.beta <4.0.0'
@@ -25,7 +25,8 @@ dependencies:
   path_provider: ^2.1.1
   package_info_plus: ^4.2.0
   xdg_directories: ^1.0.3
-  darkstorm_common: ^1.0.9
+  darkstorm_common: ^1.0.10
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
